<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
		android:id="@+id/et_login_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        />
	
	
	<EditText
		android:id="@+id/et_login_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_pwd"
        android:inputType="textPassword"
        />
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    
	    <Button 
	    android:id="@+id/btn_login"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btn_login"/>
	
	
		<Button 
	    android:id="@+id/btn_signup"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btn_signup"/>
	    
	</LinearLayout>
	
	
	
	
	

</LinearLayout>
