<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/intro_pager"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent" />
    
    <LinearLayout 
        android:id="@+id/intro_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/intro_btn_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_btn_config"
            android:visibility="gone"
            />
        <Button 
            android:id="@+id/intro_btn_tour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_btn_tour"
            android:visibility="gone"
            />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/intro_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        >
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="15dip"
            android:src="@drawable/point"
            android:contentDescription="@string/img_desc"
            />
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="15dip"
            android:src="@drawable/point"
            android:contentDescription="@string/img_desc"
            />
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="15dip"
            android:src="@drawable/point"
            android:contentDescription="@string/img_desc"
            />
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="15dip"
            android:src="@drawable/point"
            android:contentDescription="@string/img_desc"
            />
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="15dip"
            android:src="@drawable/point"
            android:contentDescription="@string/img_desc"
            />
    </LinearLayout>
    
    

</RelativeLayout>
